--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -2,13 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root{
-
+    --default-layout-header-height :60px;
+    --default-layout-width:1150px;
 }
 html{
     font-size: 62.5%;
 }
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 body{
     font-family: "Roboto", sans-serif;
