--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -4,8 +4,82 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    --serach-high:46px;
+    --search-border-radius:92px;
 }
 .inner{
     height: 100%;
-    width: 1150px;
+    width: var( --default-layout-width);
+    display: flex;
+    align-items: center;
+    justify-content: space-between ;
+}
+
+.search, .search-result {
+    width: 362px;
+}
+.search-title{
+    font-size: 1.4rem;
+    font-weight: 600;
+    padding: 5px 12px;
+    color: rgba(22 ,24, 35, 0.5);
+} 
+.search{
+    height: var(--serach-high);
+    background-color: rgba(22, 24, 35, 0.06);
+    border-radius: var(--search-border-radius);
+    padding-left: 16px;
+    display: flex;
+    position: relative;
+    border: 1.5px solid transparent;
+    input {
+        color: #000;
+        font-size: 16px;
+        background-color: transparent;
+        padding: 12px 0;
+        flex: 1;
+        caret-color: pink;
+    }
+
+    input:not(:placeholder-shown) ~.search-btn{
+        color: rgba(22, 24, 35, 0.75);
+    }
+    &::after{
+        content: "";
+        position: absolute;
+        top: 9px;
+        right: 52px;
+        width: 1px;
+        height: 28px;
+        background-color: rgba(22, 24, 35, 0.06);
+    }
+
+    &:focus-within{
+        border-color:  rgba(22, 24, 35, 0.2) ;
+    }
+}
+
+.clear,
+.loading{
+    position: absolute;
+    right:52px;
+    top:50%;
+    transform: translateY(-50%);
+    color: rgba(22, 24, 35, 0.34);
+}
+.search-btn{
+    width: 52px;
+    height: 100%;
+    border-top-right-radius: var(--search-border-radius);
+    border-bottom-right-radius: var(--search-border-radius);
+    font-size: 1.8rem;
+    color:rgba(22, 24, 35, 0.34) ;
+    &:hover{
+        cursor: pointer;
+        background-color: rgba(22, 24, 35, 0.03); 
+    }
+
+    &:active{
+        background-color: rgba(22, 24, 35, 0.06);
+    }
 }
