--- a/src/components/Layout/components/Popper/Popper.module.scss
+++ b/src/components/Layout/components/Popper/Popper.module.scss
@@ -5,4 +5,5 @@
      max-height: min((100vh - 96px ) - 60px, 734px);
      min-height: 100px;
      box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
+     opacity: 1;
 }
