--- a/src/components/Layout/components/AcountItem/AcountItem.module.scss
+++ b/src/components/Layout/components/AcountItem/AcountItem.module.scss
@@ -1,37 +1,35 @@
-.wrapperitem{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    padding: 9px 16px;
-    cursor: pointer;
-    &:hover{
-        background: rgba(22,24,35,0.03)
-    }
+.wrapperitem {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 9px 16px;
+  cursor: pointer;
+  &:hover {
+    background: rgba(22, 24, 35, 0.03);
+  }
 }
-
 
 .avatar {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
-.info{
-    flex: 1;
-    margin-left: 12px;
+.info {
+  flex: 1;
+  margin-left: 12px;
 }
-.username{
-    font-size: 1.4rem;
-    color: rgba(22, 24, 35, 0.5) ;
+.username {
+  font-size: 1.4rem;
+  color: rgba(22, 24, 35, 0.5);
 }
-.checkicon{
-    margin-left: 8px;
-    color: rgb(32,213 , 236);
- }
+.checkicon {
+  margin-left: 8px;
+  color: rgb(32, 213, 236);
+}
 
-
-.name{
-    font-size: 1.4rem;
-    font-weight: 600;
+.name {
+  font-size: 1.4rem;
+  font-weight: 600;
 }
