--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -1,12 +1,13 @@
-.wrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .container {
-    width: var(--default-layout-width);
-    display: flex;
+  width: var(--default-layout-width);
+  display: flex;
+  padding: 0 24px;
 }
 .content {
-    flex :1 ;
+  flex: 1;
 }
